syntax = "proto3";

package payment;

option go_package = "github.com/omareloui/gRPCMicroservicesInGo/proto/go/payment";

service PaymentService {
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse) {}
}

message CreatePaymentRequest {
  reserved 1;
  int64 user_id = 2;
  int64 order_id = 3;
  float price = 4;
}

message CreatePaymentResponse {
  reserved 1;
  int64 payment_id = 2;
}
